event listeners to set chosen coin and run lookup

--- a/index.html
+++ b/index.html
@@ -37,22 +37,19 @@
             </div>
             <div class="dropdown-menu" id="dropdown-menu" role="menu">
               <div class="dropdown-content">
-                <a href="#" class="dropdown-item">
-                  Dropdown item
+                <a href="#" class="dropdown-item" id="btc">
+                  Bitcoin
                 </a>
-                <a class="dropdown-item">
-                  Other dropdown item
+                <a class="dropdown-item" id="eth">
+                  Ethereum
                 </a>
-                <a href="#" class="dropdown-item is-active">
-                  Active dropdown item
+                <a href="#" class="dropdown-item is-active" id="ltc">
+                  Litecoin
                 </a>
-                <a href="#" class="dropdown-item">
-                  Other dropdown item
+                <a href="#" class="dropdown-item" id="xrp">
+                  XRP
                 </a>
-                <hr class="dropdown-divider">
-                <a href="#" class="dropdown-item">
-                  With a divider
-                </a>
+              
               </div>
             </div>
           </div>
