--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Top 5 Crypto Today !!!! </title>
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rampart+One&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,8 +19,8 @@
     <section class="hero is-primary">
         <div class="hero-body">
             <div class="container">
-    <h1 class="title has-text-centered">This Is Crypto Title</h1>
-    <h2 class="subtitle has-text-centered">Crypto Subtitle</h2>
+    <h1 class="title has-text-centered">Crypto Stats Lookup</h1>
+    <h2 class="subtitle has-text-centered">Find the most recent data on popular currencies</h2>
 
     </div>
     </div>
@@ -29,7 +32,7 @@
         <div class="dropdown">
             <div class="dropdown-trigger">
               <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-                <span>Dropdown button</span>
+                <span>Select a Currency</span>
                 <span class="icon is-small">
                   <i class="fas fa-angle-down" aria-hidden="true"></i>
                 </span>
@@ -60,21 +63,23 @@
             <div class="container has-text-centered">
                 <div class="columns">
                     <div class="column">
-                      <h1 class="is-size-1 title">First Column Title</h1>
+                      <h1 class="is-size-1 title">Crypto Stats</h1>
                       <div class="card">
                         <figure class="image is-64x64 has-image-centered">
                             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
                           </figure>
                         <div class="card-content">
                           <div class="content">
+                            <p id="price">Current Price:</p>
+                            <p id="performance">24 Hour Performance:</p>
+                            <p id="volume">Volume:</p>
                             
-                            Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras mattis consectetur purus sit amet fermentum.
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="column">
-                      <h1 class="is-size-1 title">Second Column Title</h1>
+                      <h1 class="is-size-1 title">Analysis</h1>
                       <div class="card">
                         <figure class="image is-64x64 has-image-centered">
                             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
