--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <section class="hero is-primary">
         <div class="hero-body">
             <div class="container">
-    <h1 class="title has-text-centered">This Is Crypto Title</h1>
-    <h2 class="subtitle has-text-centered">Crypto Subtitle</h2>
+    <h1 class="title has-text-centered">Crypto Lookup</h1>
+    <h2 class="subtitle has-text-centered">Latest info about your favorite crypto</h2>
 
     </div>
     </div>
@@ -60,28 +60,26 @@
             <div class="container has-text-centered">
                 <div class="columns">
                     <div class="column">
-                      <h1 class="is-size-1 title">First Column Title</h1>
+                      <h1 class="is-size-1 title">Coin Info</h1>
                       <div class="card">
                         <figure class="image is-64x64 has-image-centered">
                             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
                           </figure>
                         <div class="card-content">
-                          <div class="content">
-                            
-                            Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras mattis consectetur purus sit amet fermentum.
+                          <div class="content" id="coin-data">
+
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="column">
-                      <h1 class="is-size-1 title">Second Column Title</h1>
+                      <h1 class="is-size-1 title">Coin Resources</h1>
                       <div class="card">
                         <figure class="image is-64x64 has-image-centered">
                             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
                           </figure>
                         <div class="card-content">
-                          <div class="content">
-                            Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras mattis consectetur purus sit amet fermentum.
+                          <div class="content" id="coin-resources">
                           </div>
                         </div>
                       </div>
