made changes to Index.html + CSS

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="content has-text-centered">
-                <p><strong>Created by Emily Miles, Aaron Witthohn, Spencer Hill...</strong></p>
+            <div class="content has-text-centered" id="scroll-container">
+                <p id="scroll-text"><strong>Created by Emily Miles, Aaron Witthohn, Spencer Hill...</strong></p>
             </div>
         </div>
     </footer>
