updated coin list and added console logs to both APIs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Top 5 Crypto Today !!!! </title>
+    <title>Crypto Lookup</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rampart+One&display=swap" rel="stylesheet">
@@ -49,8 +49,8 @@
                 <a href="#" class="dropdown-item is-active" id="ltc">
                   Litecoin
                 </a>
-                <a href="#" class="dropdown-item" id="xrp">
-                  XRP
+                <a href="#" class="dropdown-item" id="doge">
+                  Dogecoin
                 </a>
               
               </div>
@@ -63,7 +63,7 @@
             <div class="container has-text-centered">
                 <div class="columns">
                     <div class="column">
-                      <h1 class="is-size-1 title">Crypto Stats</h1>
+                      <h1 class="is-size-1 title">Current Crypto Data</h1>
                       <div class="card">
                         <figure class="image is-64x64 has-image-centered">
                             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
@@ -79,7 +79,7 @@
                       </div>
                     </div>
                     <div class="column">
-                      <h1 class="is-size-1 title">Analysis</h1>
+                      <h1 class="is-size-1 title">Coin Info</h1>
                       <div class="card">
                         <figure class="image is-64x64 has-image-centered">
                             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
