adjusted style for ticker element to have its width be 100%, added media screens for mobile responsiveness, added images to assets folder and built rough draft of Read.MD file

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <div class="dropdown">
             <div class="dropdown-trigger">
-              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" id="dropDownButton">
                 <span>Select a Currency</span>
                 <span class="icon is-small">
                   <i class="fas fa-angle-down" aria-hidden="true"></i>
@@ -120,11 +120,9 @@
 
     </main>
     <footer class="footer">
-        <div class="container">
-            <div class="content has-text-centered" id="scroll-container">
+            <div class="content is-fullwidth " id="scroll-container">
                 <p id="scroll-text"><strong>Created by Emily Miles, Aaron Witthohn, Spencer Hill...</strong></p>
             </div>
-        </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="javascript.js"></script>
