added dynamic coin data content to the left box when dropdown option selected, also commented out some potentially unnecessary html for us to review

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a class="dropdown-item" id="eth">
                   Ethereum
                 </a>
-                <a href="#" class="dropdown-item is-active" id="ltc">
+                <a href="#" class="dropdown-item" id="ltc">
                   Litecoin
                 </a>
                 <a href="#" class="dropdown-item" id="doge">
@@ -63,11 +63,12 @@
             <div class="container has-text-centered">
                 <div class="columns">
                     <div class="column">
-                      <h1 class="is-size-1 title">Current Crypto Data</h1>
+                      <h1 class="is-size-1 title">Crypto Data</h1>
                       <div class="card">
-                        <figure class="image is-64x64 has-image-centered">
+                        <h2 id="symbol"></h2>
+                        <!-- <figure class="image is-64x64 has-image-centered">
                             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
-                          </figure>
+                          </figure>   -->
                         <div class="card-content">
                           <div class="content" id="coin-data">
                             <p id="price">Current Price:</p>
@@ -81,9 +82,9 @@
                     <div class="column">
                       <h1 class="is-size-1 title">Coin Info</h1>
                       <div class="card">
-                        <figure class="image is-64x64 has-image-centered">
+                        <!--<figure class="image is-64x64 has-image-centered">
                             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
-                          </figure>
+                          </figure> -->
                         <div class="card-content">
                           <div class="content" id="coin-resources">
                           </div>
@@ -93,6 +94,7 @@
             </div>
             </div>
             </section>
+            <!--
             <article class="message is-info">
                 <div class="message-header">
                     <div class="has-text-centered">
@@ -108,7 +110,7 @@
             </div>
             </div>
 </div>
-</article>
+</article> -->
 <!--modal-->
 <div class="modal">
     <div class="modal-background">
