deleted our names from ticker, updated readme

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </main>
     <footer class="footer">
             <div class="content is-fullwidth " id="scroll-container">
-                <p id="scroll-text"><strong>Created by Emily Miles, Aaron Witthohn, Spencer Hill...</strong></p>
+                <p id="scroll-text"><strong></strong></p>
             </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
