added hrefs for the urls

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         <div class="card-content">
                           <div class="content" id="coin-resources">
                             <p>Market Cap: <span id="market-cap"></span> </p>
-                            <p>Website: <a id="website"></a></p>
-                            <p>Twitter: <a id="twitter"></a></p>
+                            <p>Website: <a id="website" href=""></a></p>
+                            <p>Twitter: <a id="twitter" href=""></a></p>
                           </div>
                         </div>
                       </div>
