worked on animation

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <section class="hero is-primary">
         <div class="hero-body">
             <div class="container">
+              <div class="titleWrapper">
     <h1 class="title has-text-centered">Crypto Stats Lookup</h1>
     <h2 class="subtitle has-text-centered" id="date-time"></h2>
-
+</div>
     </div>
     </div>
     </section>
