--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                     <div class="column">
                       <h1 class="is-size-1 title">Coin Info</h1>
                       <div class="card">
+                        <h2>Rank: <span id="ranking"></span></h2>
                         <!--<figure class="image is-64x64 has-image-centered">
                             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
                           </figure> -->
