--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 </div>
 </article> -->
 <!--modal-->
-<div class="modal">
+<div class="modal is-active">
     <div class="modal-background">
         <div class="modal-content has-background-white py-5 px-5">
             <h3 class="title mb-6">Title for the modal</h3>
-            <button class="delete" aria-label="delete"></button>
+            <button id="modal-x-btn" class="delete" aria-label="delete"></button>
         </div>
     </div>
 </div>
