--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="hero-body">
             <div class="container">
               <div class="titleWrapper">
-    <h1 class="title has-text-centered">Crypto Stats Lookup</h1>
+    <h1 class="title has-text-centered" id="pageTitle">Crypto Stats Lookup</h1>
     <h2 class="subtitle has-text-centered" id="date-time"></h2>
 </div>
     </div>
@@ -133,7 +133,7 @@
     </main>
     <footer class="footer">
             <div class="content is-fullwidth" id="scroll-container">
-                <p id="scroll-text"><strong></strong></p>
+              <strong><p id="scroll-text"></p></strong>
             </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
