added coinSearch function and event listener for search button to perform open searches on crypto symbols

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           </div>
 
           <form>
-            <input type="text" placeholder="Search for a Coin">
-            <button>Search</button>
+            <input id="new-coin" type="text" placeholder="Search for a Coin">
+            <button id="search-btn" >Search</button>
           </form>
 
 
