added modal info

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="column">
             <h1 class="is-size-1 title">Coin Info</h1>
             <div class="card">
-              <h2><span id="ranking"></span></h2>            
+              <h2><span id="ranking"></span></h2>
               <div class="card-content">
                 <div class="content" id="coin-resources">
                   <p>Market Cap: <span id="market-cap"></span> </p>
@@ -126,7 +126,11 @@
     <div class="modal is-active">
       <div class="modal-background">
         <div class="modal-content has-background-white py-5 px-5">
-          <h3 class="title mb-6">Title for the modal</h3>
+          <img class="has-image-centered" src="./assets/Leo Dollar Bill.jpg"
+            alt="Wolf of Wall Street Leo(holding dollar)">
+          <h3 class="title mb-6 has-text-centered">Disclaimer!</h3>
+          <p>This site was made strictly to provide information. It was built as a demonstration of technical skills
+            obtained through the UNC Coding Bootcamp. Trade scrictly at your own risk.</p>
           <button id="modal-x-btn" class="delete" aria-label="delete"></button>
         </div>
       </div>
