added startpage is-hidden class to icon/data and js to remove is-hidden as part of cryptoLookup

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
         <input id="new-coin" type="text" placeholder="Search for a Coin">
         <button id="search-btn">Search</button>
       </form>
-      <figure class="image is-64x64 has-image-centered mt-3">
+      <figure class="image is-64x64 has-image-centered mt-3 startpage is-hidden">
         <img id="coin-image" src="">
         <h1 class="mt-4"><strong><span id="coin-name"></span></strong></h1>
       </figure>
     </section>
 
 
-    <section class="section mb-5 mt-0">
+    <section class="section mb-5 mt-0 startpage is-hidden">
       <div class="container has-text-centered">
         <div class="columns">
           <div class="column">
