formatted search bar with bulma, which required re-working the form html, and added js to change size of search bar after search

--- a/index.html
+++ b/index.html
@@ -60,16 +60,25 @@
       </div>
     </div> -->
 
-    <section>
-      <form class="form has-text-centered mt-3" id="search-form">
-        <input id="new-coin" type="text" placeholder="Search for a Coin">
-        <button id="search-btn">Search</button>
-      </form>
-      <figure class="image is-64x64 has-image-centered mt-3 startpage is-hidden">
-        <img id="coin-image" src="">
-        <h1 class="mt-4"><strong><span id="coin-name"></span></strong></h1>
-      </figure>
+    <div class="field has-addons" id="search-form">
+      <div class="has-text-centered control is-expanded">
+          <input class="input is-large" id="new-coin" type="text" placeholder="Search for a Coin">
+      </div>
+      <div class="control">
+          <button class="button is-large" id="search-btn">Search</button>
+      </div>
+    </div>
+    <section class="is-fullwidth has-text-centered mb-5" id="contact-us-container">
+      <a class=""id="contact-us" href="mailto: CryptoLookUp@yahoo.com">Contact Us!</a>
     </section>
+  
+
+      <figure class="image is-64x64 has-image-centered mt-5 startpage is-hidden">
+        <h1 class="mt-4 has-text-centered mb-3"><strong><span id="coin-name"></span></strong></h1>
+        <img class="mt-4" id="coin-image" src="">
+        
+      </figure>
+
 
 
     <section class="section mb-5 mt-0 startpage is-hidden">
