--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 
   <main>
+    <!--dropdown was created at first before Search Bar was built-->
     <!-- <div class="dropdown">
       <div class="dropdown-trigger">
         <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" id="dropDownButton">
@@ -55,11 +56,12 @@
           <a href="#" class="dropdown-item" id="doge">
             Dogecoin
           </a>
-
         </div>
       </div>
     </div> -->
 
+    <!--Search Bar added to search for broader selection of coins with either name or symbol-->
+    <!-- don't change these tags to semantic, bulma needs divs for the form-->
     <div class="field has-addons" id="search-form">
       <div class="has-text-centered control is-expanded">
           <input class="input is-large" id="new-coin" type="text" placeholder="Search for a Coin">
@@ -73,14 +75,14 @@
     </section>
   
 
-      <figure class="image is-64x64 has-image-centered mt-5 startpage is-hidden">
-        <h1 class="mt-4 has-text-centered mb-3"><strong><span id="coin-name"></span></strong></h1>
-        <img class="mt-4" id="coin-image" src="">
-        
-      </figure>
+    <!--Coin name and icon is generated here from Search-->
+    <figure class="image is-64x64 has-image-centered mt-5 startpage is-hidden">
+      <h1 class="mt-4 has-text-centered mb-3"><strong><span id="coin-name"></span></strong></h1>
+      <img class="mt-4" id="coin-image" src="">
+    </figure>
 
 
-
+    <!--Two cards created to call the 2 APIs with the coin search and retrieve data to display here-->
     <section class="section mb-5 mt-0 startpage is-hidden">
       <div class="container has-text-centered">
         <div class="columns">
@@ -93,7 +95,6 @@
                   <p id="price">Current Price:</p>
                   <p id="performance">24 Hour Performance:</p>
                   <p id="volume">Volume:</p>
-
                 </div>
               </div>
             </div>
@@ -114,24 +115,9 @@
         </div>
       </div>
     </section>
-    <!--
-            <article class="message is-info">
-                <div class="message-header">
-                    <div class="has-text-centered">
-                  <p>Hello World</p>
-                  </div>
-                  </div>
-                  <div class="has-text-centered">
-                  <div class="message-body">
-                   Click button to get modal
-                   </div>
-                <div class="has-text-centered">
-            <button class="button">Modal Button</button>
-            </div>
-            </div>
-</div>
-</article> -->
-    <!--modal-->
+
+
+    <!--opening modal with disclaimer-->
     <div class="modal is-active">
       <div class="modal-background">
         <div class="modal-content has-background-white py-5 px-5">
@@ -146,6 +132,8 @@
     </div>
 
   </main>
+
+  <!--dynamically generated ticker animation with top 20 cryptos from API call, scrolling animation-->
   <footer class="footer">
     <div class="content is-fullwidth" id="scroll-container">
       <strong>
@@ -153,8 +141,10 @@
       </strong>
     </div>
   </footer>
+
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   <script src="javascript.js"></script>
+
 </body>
 
 </html>
