made the data descriptors and main headings bold in the cards

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
           <div class="column">
             <h1 class="is-size-1 title">Crypto Data</h1>
             <div class="card">
-              <h2 id="symbol"></h2>
+              <h2><strong><span id="symbol"></span></strong></h2>
               <div class="card-content">
                 <div class="content" id="coin-data">
-                  <p id="price">Current Price:</p>
-                  <p id="performance">24 Hour Performance:</p>
-                  <p id="volume">Volume:</p>
+                  <p><strong>Current Price: </strong><span id="price"></span></p>
+                  <p><strong>24 Hour Performance: </strong><span id="performance"></span></p>
+                  <p><strong>Volume:</strong><span id="volume"></span></p>
                 </div>
               </div>
             </div>
@@ -102,12 +102,12 @@
           <div class="column">
             <h1 class="is-size-1 title">Coin Info</h1>
             <div class="card">
-              <h2><span id="ranking"></span></h2>
+              <h2><strong><span id="ranking"></span></strong></h2>
               <div class="card-content">
                 <div class="content" id="coin-resources">
-                  <p>Market Cap: <span id="market-cap"></span> </p>
-                  <p>Website: <a id="website" href=""></a></p>
-                  <p>Twitter: <a id="twitter" href=""></a></p>
+                  <p><strong>Market Cap: </strong><span id="market-cap"></span> </p>
+                  <p><strong>Website: </strong> <a id="website" href=""></a></p>
+                  <p><strong>Twitter: </strong> <a id="twitter" href=""></a></p>
                 </div>
               </div>
             </div>
