autocomplete set to off for input

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- don't change these tags to semantic, bulma needs divs for the form-->
     <div class="field has-addons" id="search-form">
       <div class="has-text-centered control is-expanded">
-          <input class="input is-large" id="new-coin" type="text" placeholder="Search for a Coin">
+          <input class="input is-large" id="new-coin" type="text" autocomplete="off" placeholder="Search for a Coin">
       </div>
       <div class="control">
           <button class="button is-large" id="search-btn">Search</button>
