changed fonts, added IDs in html, modal exit should be placed top right

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
               <h2><strong><span id="symbol"></span></strong></h2>
               <div class="card-content">
                 <div class="content" id="coin-data">
-                  <p><strong>Current Price: </strong><span id="price"></span></p>
-                  <p><strong>24 Hour Performance: </strong><span id="performance"></span></p>
-                  <p><strong>Volume:</strong><span id="volume"></span></p>
+                  <p id="box-format"><strong>Current Price: </strong><span id="price"></span></p>
+                  <p id="box-format"><strong>24 Hour Performance: </strong><span id="performance"></span></p>
+                  <p id="box-format"><strong>Volume:</strong><span id="volume"></span></p>
                 </div>
               </div>
             </div>
@@ -105,9 +105,9 @@
               <h2><strong><span id="ranking"></span></strong></h2>
               <div class="card-content">
                 <div class="content" id="coin-resources">
-                  <p><strong>Market Cap: </strong><span id="market-cap"></span> </p>
-                  <p><strong>Website: </strong> <a id="website" href=""></a></p>
-                  <p><strong>Twitter: </strong> <a id="twitter" href=""></a></p>
+                  <p id="box-format"><strong>Market Cap: </strong><span id="market-cap"></span> </p>
+                  <p id="box-format"><strong>Website: </strong> <a id="website" href=""></a></p>
+                  <p id="box-format"><strong>Twitter: </strong> <a id="twitter" href=""></a></p>
                 </div>
               </div>
             </div>
