adjusted fonts, changed gradient on title to flow left with ticker

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   
 
     <!--Coin name and icon is generated here from Search-->
-    <figure class="image is-64x64 has-image-centered mt-5 startpage is-hidden">
+    <figure class="image is-96x96 has-image-centered mt-5 startpage is-hidden">
       <h1 class="mt-4 has-text-centered mb-3"><strong><span id="coin-name"></span></strong></h1>
       <img class="mt-4" id="coin-image" src="">
     </figure>
@@ -135,7 +135,7 @@
 
   <!--dynamically generated ticker animation with top 20 cryptos from API call, scrolling animation-->
   <footer class="footer">
-    <div class="content is-fullwidth" id="scroll-container">
+    <div class="content is-fullwidth has-background-black" id="scroll-container">
         <p id="scroll-text"></p>
     </div>
   </footer>
