added subject to email in contact us

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <section class="is-fullwidth has-text-centered mb-5" id="contact-us-container">
-      <a class=""id="contact-us" href="mailto: CryptoLookUp@yahoo.com">Contact Us!</a>
+      <a class=""id="contact-us" href="mailto: CryptoLookUp@yahoo.com?subject=Crypto Lookup Future Dev Idea 💡">Contact Us!</a>
     </section>
   
 
