added autocomplete widget and script tag for jquery ui

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="javascript.js"></script>
 
 </body>
