took coin name and place it outside the icon figure which fixes the centering issue

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   
 
     <!--Coin name and icon is generated here from Search-->
+    <h1 class="mt-4 has-text-centered mb-3 startpage is-hidden"><span id="coin-name"></span></h1>
     <figure class="image is-96x96 has-image-centered mt-5 startpage is-hidden">
-      <h1 class="mt-4 has-text-centered mb-3"><span id="coin-name"></span></h1>
       <img class="mt-4" id="coin-image" src="">
     </figure>
 
