--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
   
 
     <!--Coin name and icon is generated here from Search-->
-    <h1 class="mt-4 has-text-centered mb-3 startpage is-hidden"><span id="coin-name"></span></h1>
-    <figure class="image is-96x96 has-image-centered mt-5 startpage is-hidden">
-      <img class="mt-4" id="coin-image" src="">
+    <h1 class="mt-3 has-text-centered mb-1 startpage is-hidden"><span id="coin-name"></span></h1>
+    <figure class="image is-96x96 has-image-centered mt-2 startpage is-hidden">
+      <img class="mt-1" id="coin-image" src="">
     </figure>
 
 
     <!--Two cards created to call the 2 APIs with the coin search and retrieve data to display here-->
-    <section class="section mb-5 mt-0 startpage is-hidden">
+    <section class="section mb-5 mt-0 pt-0 startpage is-hidden">
       <div class="container has-text-centered">
         <div class="columns">
           <div class="column">
